Bug 205610 - ANGLE: Fix object deletion behavior.
Summary: ANGLE: Fix object deletion behavior.
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: James Darpinian
URL:
Keywords: InRadar
Depends on:
Blocks: webglangle 220372
  Show dependency treegraph
 
Reported: 2019-12-27 16:45 PST by James Darpinian
Modified: 2021-01-06 17:46 PST (History)
10 users (show)

See Also:


Attachments
Fix object deletion behavior. (1.81 KB, patch)
2019-12-27 16:46 PST, James Darpinian
no flags Details | Formatted Diff | Diff
Don't delete objects twice (2.38 KB, patch)
2020-02-04 17:55 PST, James Darpinian
no flags Details | Formatted Diff | Diff
Fix object-deletion-behavior.html (7.86 KB, patch)
2020-02-05 17:35 PST, James Darpinian
no flags Details | Formatted Diff | Diff
Remove wrong layout test (55.76 KB, patch)
2020-02-12 14:18 PST, James Darpinian
no flags Details | Formatted Diff | Diff
Fix WebGL 2 version of the test (56.59 KB, patch)
2020-02-12 16:06 PST, James Darpinian
no flags Details | Formatted Diff | Diff
Update ChangeLogs (57.75 KB, patch)
2020-02-12 16:31 PST, James Darpinian
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description James Darpinian 2019-12-27 16:45:00 PST
ANGLE: Fix object deletion behavior.
Comment 1 James Darpinian 2019-12-27 16:46:50 PST
Created attachment 386460 [details]
Fix object deletion behavior.
Comment 2 James Darpinian 2020-02-04 17:55:11 PST
Created attachment 389755 [details]
Don't delete objects twice
Comment 3 James Darpinian 2020-02-05 17:35:34 PST
Created attachment 389914 [details]
Fix object-deletion-behavior.html
Comment 4 James Darpinian 2020-02-12 14:18:47 PST
Created attachment 390559 [details]
Remove wrong layout test
Comment 5 James Darpinian 2020-02-12 16:06:16 PST
Created attachment 390579 [details]
Fix WebGL 2 version of the test
Comment 6 James Darpinian 2020-02-12 16:31:15 PST
Created attachment 390587 [details]
Update ChangeLogs
Comment 7 WebKit Commit Bot 2020-02-17 12:08:18 PST
Comment on attachment 390587 [details]
Update ChangeLogs

Clearing flags on attachment: 390587

Committed r256758: <https://trac.webkit.org/changeset/256758>
Comment 8 WebKit Commit Bot 2020-02-17 12:08:20 PST
All reviewed patches have been landed.  Closing bug.
Comment 9 Radar WebKit Bug Importer 2020-02-17 12:09:17 PST
<rdar://problem/59520750>