ANGLE: Fix object deletion behavior. https://bugs.webkit.org/show_bug.cgi?id=205610

Source/WebCore:

Fixes WebGL conformance tests object-deletion-behavior.html and vertex-array-object.html.

Patch by James Darpinian <jdarpinian@chromium.org> on 2020-02-17
Reviewed by Dean Jackson.

* html/canvas/WebGL2RenderingContext.cpp:
(WebCore::WebGL2RenderingContext::getFramebufferAttachmentParameter):
    No error when getting attachment name with a null attachment.
* html/canvas/WebGLObject.cpp:
(WebCore::WebGLObject::deleteObject):
    Don't delay deleting objects when using ANGLE, becuase ANGLE handles object
    deletion correctly with WebGL semantics. This fixes some conformance tests
    including vertex-array-object.html.
* html/canvas/WebGLObject.h:
* html/canvas/WebGLRenderingContextBase.cpp:
(WebCore::WebGLRenderingContextBase::checkObjectToBeBound):
    Always generate INVALID_OPERATION when the object is deleted.
(WebCore::WebGLRenderingContextBase::validateAndCacheBufferBinding):
(WebCore::WebGLRenderingContextBase::bindFramebuffer):
(WebCore::WebGLRenderingContextBase::bindRenderbuffer):
(WebCore::WebGLRenderingContextBase::bindTexture):
(WebCore::WebGLRenderingContextBase::useProgram):
* html/canvas/WebGLRenderingContextBase.h:

LayoutTests:

Remove incorrect (out-of-date) test. This correct version of this test is still present in the WebGL
conformance tests.

Patch by James Darpinian <jdarpinian@chromium.org> on 2020-02-17
Reviewed by Dean Jackson.

* fast/canvas/webgl/object-deletion-behaviour-expected.txt: Removed.
* fast/canvas/webgl/object-deletion-behaviour.html: Removed.

Canonical link: https://commits.webkit.org/220817@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@256758 268f45cc-cd09-0410-ab3c-d52691b4dbfc