Source/WebCore/html/canvas/WebGLObject.cpp
@@ -53,15 +53,24 @@ void WebGLObject::deleteObject(GraphicsContextGLOpenGL* context3d)
     if (!hasGroupOrContext())
         return;
 
+    // ANGLE correctly handles object deletion with WebGL semantics.
+    // For other GL implementations, delay deletion until we know
+    // the object is not attached anywhere.
+#if USE(ANGLE)
+    if (!m_calledDelete) {
+        m_calledDelete = true;
+#else
     if (!m_attachmentCount) {
+#endif
         if (!context3d)
             context3d = getAGraphicsContextGL();
 
         if (context3d)
             deleteObjectImpl(context3d, m_object);
-
-        m_object = 0;
     }
+
+    if (!m_attachmentCount)
+        m_object = 0;
 }
 
 void WebGLObject::detach()
